# olist-sql-warehouse

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
dashboard/: app.py
notebooks/: 01_warehouse_demo.ipynb
sql/: 01_raw_load.sql  02_build_dims.sql  03_build_facts.sql  q01_monthly_revenue.sql  q02_top_categories.sql  q03_delivery_performance.sql  q04_review_score_trend.sql  q05_repeat_customer_cohorts.sql  q06_seller_concentration.sql  q07_payment_method_mix.sql  q08_geographic_revenue.sql  q09_basket_size_distribution.sql  q10_churn_funnel.sql
src/: db.py  runner.py
src/olist_sql_warehouse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
