[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-sql-warehouse"
version = "0.1.0"
description = "SQL warehouse and dashboard on the Olist Brazilian e-commerce dataset"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.1",
    "streamlit>=1.32",
    "plotly>=5.20",
    "pytest>=8.0",
]